Switched to JUnit in order to be able to use System Rules [ see http://stefanbirkner.github.io/system-rules/index.html  ]