@@ -11,39 +11,10 @@ subprojects {
     }
 
     dependencies {
-        testCompile 'org.testng:testng:6.9.9'
+        testCompile 'junit:junit:4.12'
+        testCompile 'com.github.stefanbirkner:system-rules:1.15.0'
     }
 
-    test {
-        // enable TestNG support (default is JUnit)
-        useTestNG()
-
-        // set a system property for the test JVM(s)
-        systemProperty 'some.prop', 'value'
-
-        // explicitly include or exclude tests
-        include 'edu/coldserenity/tij/**'
-
-        // show standard out and standard error of the test JVM(s) on the console
-        testLogging.showStandardStreams = true
-
-        // set heap size for the test JVM(s)
-        minHeapSize = "128m"
-        maxHeapSize = "512m"
-
-        // set JVM arguments for the test JVM(s)
-        jvmArgs '-XX:MaxPermSize=256m'
-
-        // listen to events in the test execution lifecycle
-        beforeTest { descriptor ->
-            logger.lifecycle("Running test: " + descriptor)
-        }
-
-        // listen to standard out and standard error of the test JVM(s)
-        onOutput { descriptor, event ->
-            logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
-        }
-    }
 }
 
 allprojects {
